infra/k8s/backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: niass/api-5
---
apiVersion: v1
kind: Service
metadata:
  name: backend-srv
spec:
  selector: 
    app: backend
  ports:
    - name: backend
      port: 3000
      targetPort: 3000
